replace var name

--- a/configs/realesrnet_x4_degradation.yaml
+++ b/configs/realesrnet_x4_degradation.yaml
@@ -1,5 +1,5 @@
 DEVICE: "0" # "0" means GPU 0, "0,1" means GPU 0 and 1, etc.
-EXP_NAME: "rrdbnet_x4-DFO2K" # Name of the experiment
+EXP_NAME: "realesrnet_x4-dfo2k" # Name of the experiment
 PHASE: "psnr" # psnr, gan
 UPSCALE_FACTOR: 4
 
@@ -105,7 +105,7 @@ TRAIN:
   VERBOSE: True
 
 EVAL:
-  WEIGHTS_PATH: "realesrnet_x4-dfo2k.pkl"
+  WEIGHTS_PATH: "results/pretrained_models/realesrnet_x4-dfo2k.pkl"
   NIQE_WEIGHTS_PATH: "results/pretrained_models/niqe_model.mat"
   HALF: True
   ONLY_TEST_Y_CHANNEL: True
