--- a/configs/inference.yaml
+++ b/configs/inference.yaml
@@ -1,5 +1,5 @@
 DEVICE: "0"
-WEIGHTS_PATH: "realesrnet_x4-dfo2k.pkl"
+WEIGHTS_PATH: "results/pretrained_models/realesrgan_x4-dfo2k.pkl"
 HALF: True
-INPUTS: "figure"
-OUTPUT: "output"
+INPUTS: "demo/data"
+OUTPUT: "demo/output"
