--- a/configs/edsrnet_x2_degradation.yaml
+++ b/configs/edsrnet_x2_degradation.yaml
@@ -1,5 +1,5 @@
 DEVICE: "0" # "0" means GPU 0, "0,1" means GPU 0 and 1, etc.
-EXP_NAME: "realesrnet_x4-dfo2k_degradation" # Name of the experiment
+EXP_NAME: "edsrnet_x4-dfo2k_degradation" # Name of the experiment
 PHASE: "psnr" # psnr, gan
 UPSCALE_FACTOR: 4
 
@@ -53,12 +53,11 @@ DATASET:
 
 MODEL:
   G:
-    TYPE: "rrdbnet_x4"
+    TYPE: "edsrnet_x4"
     IN_CHANNELS: 3
     OUT_CHANNELS: 3
     CHANNELS: 64
-    GROWTH_CHANNELS: 32
-    NUM_RRDB: 23
+    NUM_RCB: 16
 
 TRAIN:
   RESUME_G: ""
@@ -105,6 +104,6 @@ TRAIN:
   VERBOSE: True
 
 EVAL:
-  WEIGHTS_PATH: "results/pretrained_models/realesrnet_x4-dfo2k_degradation.pkl"
+  WEIGHTS_PATH: "results/pretrained_models/edsrnet_x4-dfo2k_degradation.pkl"
   NIQE_WEIGHTS_PATH: "results/pretrained_models/niqe_model.mat"
   ONLY_TEST_Y_CHANNEL: True
