--- a/configs/realesrnet_x4_degradation.yaml
+++ b/configs/realesrnet_x4_degradation.yaml
@@ -76,7 +76,7 @@ TRAIN:
     G:
       OPTIM: "Adam"
       LR: 0.0002
-      BETAS: [ 0.9, 0.99 ]
+      BETAS: ( 0.9, 0.99 )
       EPS: 0.0001 # Ensure mixed precision training does not appear Nan
       WEIGHT_DECAY: 0.0
 
