fix TypeError: '<=' not supported between instances of 'float' and 'str'

--- a/configs/Real_ESRGAN/realesrgan_x4_degradation.yaml
+++ b/configs/Real_ESRGAN/realesrgan_x4_degradation.yaml
@@ -84,7 +84,7 @@ TRAIN:
     G:
       OPTIM: "Adam"
       LR: 0.0001
-      BETAS: ( 0.9, 0.99 )
+      BETAS: [ 0.9, 0.99 ]
       EPS: 0.0001 # Ensure mixed precision training does not appear Nan
       WEIGHT_DECAY: 0.0
 
@@ -95,7 +95,7 @@ TRAIN:
     D:
       OPTIM: "Adam"
       LR: 0.0001
-      BETAS: ( 0.9, 0.99 )
+      BETAS: [ 0.9, 0.99 ]
       EPS: 0.0001 # Ensure mixed precision training does not appear Nan
       WEIGHT_DECAY: 0.0
 
