--- a/configs/Real_ESRGAN/realesrnet_x4_degradation.yaml
+++ b/configs/Real_ESRGAN/realesrnet_x4_degradation.yaml
@@ -64,7 +64,7 @@ TRAIN:
   RESUME_G: ""
 
   # train weights
-  G_WEIGHTS_PATH: "results/pretrained_models/realesrnet_x4-dfo2k_degradation.pkl"
+  G_WEIGHTS_PATH: ""
 
   # train datasets
   IMAGE_SIZE: 256
