--- a/configs/Real_ESRGAN/realesrgan_x4_degradation.yaml
+++ b/configs/Real_ESRGAN/realesrgan_x4_degradation.yaml
@@ -82,22 +82,24 @@ TRAIN:
   # train solver
   SOLVER:
     G:
-      OPTIM: "Adam"
-      LR: 0.0001
-      BETAS: [ 0.9, 0.99 ]
-      EPS: 0.0001 # Ensure mixed precision training does not appear Nan
-      WEIGHT_DECAY: 0.0
+      OPTIM:
+        TYPE: "Adam"
+        LR: 0.0001
+        BETAS: [ 0.9, 0.99 ]
+        EPS: 0.0001 # Ensure mixed precision training does not appear Nan
+        WEIGHT_DECAY: 0.0
 
       LR_SCHEDULER:
         TYPE: "MultiStepLR"
         milestones: [ 4, 8, 16, 26 ]  # 0.125, 0.250, 0.5, 0.75
         GAMMA: 0.5
     D:
-      OPTIM: "Adam"
-      LR: 0.0001
-      BETAS: [ 0.9, 0.99 ]
-      EPS: 0.0001 # Ensure mixed precision training does not appear Nan
-      WEIGHT_DECAY: 0.0
+      OPTIM:
+        TYPE: "Adam"
+        LR: 0.0001
+        BETAS: [ 0.9, 0.99 ]
+        EPS: 0.0001 # Ensure mixed precision training does not appear Nan
+        WEIGHT_DECAY: 0.0
 
       LR_SCHEDULER:
         TYPE: "MultiStepLR"
