--- a/configs/Real_ESRGAN/realesrnet_x4_degradation.yaml
+++ b/configs/Real_ESRGAN/realesrnet_x4_degradation.yaml
@@ -74,11 +74,12 @@ TRAIN:
   # train solver
   SOLVER:
     G:
-      OPTIM: "Adam"
-      LR: 0.0002
-      BETAS: [ 0.9, 0.99 ]
-      EPS: 0.0001 # Ensure mixed precision training does not appear Nan
-      WEIGHT_DECAY: 0.0
+      OPTIM:
+        TYPE: "Adam"
+        LR: 0.0002
+        BETAS: [ 0.9, 0.99 ]
+        EPS: 0.0001 # Ensure mixed precision training does not appear Nan
+        WEIGHT_DECAY: 0.0
 
       LR_SCHEDULER:
         TYPE: "StepLR"
