--- a/configs/EDSR/edsrnet_x4_degradation.yaml
+++ b/configs/EDSR/edsrnet_x4_degradation.yaml
@@ -45,7 +45,7 @@ DEGRADATION_PROCESS_PARAMETERS_DICT:
 
 DATASET:
   MODE: "degradation" # degradation, paired
-  TRAIN_GT_IMAGES_DIR: "data/DFO2K/sub_image_384x384"
+  TRAIN_GT_IMAGES_DIR: "data/DF2K/DF2K_sub_image_384x384"  # 178574 images
   TRAIN_LR_IMAGES_DIR: ""
 
   VAL_GT_IMAGES_DIR: "data/Set5/X4/GT"
@@ -67,32 +67,32 @@ TRAIN:
 
   # train datasets
   IMAGE_SIZE: 192
-  BATCH_SIZE: 64
+  BATCH_SIZE: 64  # 178574 / 64 ~= 2790 iters / epoch
   NUM_WORKERS: 4
 
   # train solver
   SOLVER:
     G:
       OPTIM:
-        TYPE: "Adam"
+        TYPE: "adam"
         LR: 0.0001
         BETAS: [ 0.9, 0.999 ]
         EPS: 0.0001 # Ensure mixed precision training does not appear Nan
         WEIGHT_DECAY: 0.0
 
       LR_SCHEDULER:
-        TYPE: "StepLR"
-        STEP_SIZE: 57  # epochs / 2
+        TYPE: "step_lr"
+        STEP_SIZE: 180  # epochs / 2
         GAMMA: 0.5
 
   # loss config
   LOSS:
     PIXEL:
-      TYPE: "l1"
+      TYPE: "l1_loss"
       WEIGHT: [ 1.0 ]
 
   # train hyper-parameters
-  EPOCHS: 85  # 85 * 11869 = 1,008,865 ~= 1,000,000 iters
+  EPOCHS: 359  # 359 * 2790 = 1,001,610 ~= 1,000,000 iters
 
   # train setup
   LOCAL_RANK: -1
