--- a/configs/Real_ESRGAN/realesrgan_x4_degradation-finetune.yaml
+++ b/configs/Real_ESRGAN/realesrgan_x4_degradation-finetune.yaml
@@ -1,6 +1,6 @@
 DEVICE: "0" # "0" means GPU 0, "0,1" means GPU 0 and 1, etc.
-EXP_NAME: "realesrnet_x4-df2k_degradation" # Name of the experiment
-PHASE: "psnr" # psnr, gan
+EXP_NAME: "realesrgan_x4-df2k_degradation" # Name of the experiment
+PHASE: "gan" # psnr, gan
 UPSCALE_FACTOR: 4
 
 DEGRADATION_MODEL_PARAMETERS_DICT:
@@ -59,12 +59,20 @@ MODEL:
     CHANNELS: 64
     GROWTH_CHANNELS: 32
     NUM_RRDB: 23
+  D:
+    TYPE: "discriminator_for_unet"
+    IN_CHANNELS: 3
+    OUT_CHANNELS: 1
+    CHANNELS: 64
+    UPSAMPLE_METHOD: "bilinear"
 
 TRAIN:
   RESUME_G: ""
+  RESUME_D: ""
 
   # train weights
-  G_WEIGHTS_PATH: ""
+  G_WEIGHTS_PATH: "results/pretrained_models/realesrgan_x4-df2k_degradation.pkl"
+  D_WEIGHTS_PATH: "results/pretrained_models/discriminator_for_unet_x4-df2k_degradation.pkl"
 
   # train datasets
   IMAGE_SIZE: 256
@@ -76,14 +84,26 @@ TRAIN:
     G:
       OPTIM:
         TYPE: "adam"
-        LR: 0.0002
+        LR: 0.0001
         BETAS: [ 0.9, 0.99 ]
         EPS: 0.0001 # Ensure mixed precision training does not appear Nan
         WEIGHT_DECAY: 0.0
 
       LR_SCHEDULER:
-        TYPE: "step_lr"
-        STEP_SIZE: 18  # epochs / 5
+        TYPE: "multistep_lr"
+        MILESTONES: [ 5, 10, 20, 30 ]  # 0.125, 0.250, 0.5, 0.75
+        GAMMA: 0.5
+    D:
+      OPTIM:
+        TYPE: "adam"
+        LR: 0.0001
+        BETAS: [ 0.9, 0.99 ]
+        EPS: 0.0001 # Ensure mixed precision training does not appear Nan
+        WEIGHT_DECAY: 0.0
+
+      LR_SCHEDULER:
+        TYPE: "multistep_lr"
+        MILESTONES: [ 5, 10, 20, 30 ]  # 0.125, 0.250, 0.5, 0.75
         GAMMA: 0.5
 
   # loss config
@@ -91,9 +111,15 @@ TRAIN:
     PIXEL:
       TYPE: "l1_loss"
       WEIGHT: [ 1.0 ]
+    FEATURE:
+      TYPE: "feature_loss"
+      WEIGHT: [ 0.1, 0.1, 1.0, 1.0, 1.0 ]
+    ADV:
+      TYPE: "bce_with_logits_loss"
+      WEIGHT: [ 0.1 ]
 
   # train hyper-parameters
-  EPOCHS: 90  # 90 * 11160 = 1,004,400 ~= 1,000,000 iters
+  EPOCHS: 36  # 36 * 11160 = 401,760 ~= 400,000 iters
 
   # train setup
   LOCAL_RANK: -1
@@ -106,6 +132,6 @@ TRAIN:
   VERBOSE: True
 
 EVAL:
-  WEIGHTS_PATH: "results/train/realesrnet_x4-df2k_degradation/weights/g_best_checkpoint.pkl"
+  WEIGHTS_PATH: "results/train/realesrgan_x4-df2k_degradation-finetune/weights/g_best_checkpoint.pkl"
   NIQE_WEIGHTS_PATH: "results/pretrained_models/niqe_model.mat"
   ONLY_TEST_Y_CHANNEL: True
