--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,10 @@
 data/DIV2K_train_HR
 data/Flickr2K
 data/OST
-data/DFO2K
+data/DF2K
 data/Set5
 data/Set14
+data/custom
 
 demo/data
 demo/output
