--- a/configs/Real_ESRGAN/realesrnet_x4_degradation-finetune.yaml
+++ b/configs/Real_ESRGAN/realesrnet_x4_degradation-finetune.yaml
@@ -76,13 +76,13 @@ TRAIN:
     G:
       OPTIM:
         TYPE: "adam"
-        LR: 0.0002
+        LR: 0.0001
         BETAS: [ 0.9, 0.99 ]
 
       LR_SCHEDULER:
-        TYPE: "step_lr"
-        STEP_SIZE: 18  # epochs / 5
-        GAMMA: 0.5
+        TYPE: "constant"
+        FACTOR: 1.0
+        TOTAL_ITERS: 90
 
   # loss config
   LOSS:
