--- a/configs/Real_ESRGAN/realesrnet_x4_degradation.yaml
+++ b/configs/Real_ESRGAN/realesrnet_x4_degradation.yaml
@@ -80,9 +80,9 @@ TRAIN:
         BETAS: [ 0.9, 0.99 ]
 
       LR_SCHEDULER:
-        TYPE: "step_lr"
-        STEP_SIZE: 18  # epochs / 5
-        GAMMA: 0.5
+        TYPE: "constant"
+        FACTOR: 1.0
+        TOTAL_ITERS: 90
 
   # loss config
   LOSS:
