--- a/configs/Real_ESRGAN/realesrgan_x4_degradation-finetune.yaml
+++ b/configs/Real_ESRGAN/realesrgan_x4_degradation-finetune.yaml
@@ -44,11 +44,11 @@ DEGRADATION_PROCESS_PARAMETERS_DICT:
   JPEG_RANGE2: [ 30, 95 ]
 
 DATASET:
-  TRAIN_GT_IMAGES_DIR: "data/DF2K/DF2K_sub_image_384x384"  # 178574 images
+  TRAIN_GT_IMAGES_DIR: "datasets/DF2K/DF2K_sub_image_384x384"  # 178574 images
   TRAIN_LR_IMAGES_DIR: ""
 
-  VAL_GT_IMAGES_DIR: "data/Set5/X4/GT"
-  VAL_LR_IMAGES_DIR: "data/Set5/X4/LR"
+  VAL_GT_IMAGES_DIR: "datasets/Set5/X4/GT"
+  VAL_LR_IMAGES_DIR: "datasets/Set5/X4/LR"
 
 MODEL:
   G:
