--- a/configs/inference.yaml
+++ b/configs/inference.yaml
@@ -1,4 +1,4 @@
 DEVICE: "0"
 WEIGHTS_PATH: "results/pretrained_models/realesrgan_x4-df2k_degradation.pkl"
 INPUTS: "demo/data"
-OUTPUT: "demo/output/realesrnet_x4-df2k_degradation"
+OUTPUT: "demo/output"
